products/src/main/java/com/example/products/ui/errors/PaymentError.kt
package com.example.products.ui.errors

sealed class PaymentError {
    object BuyProductError : PaymentError()
    object GetProductDetailError : PaymentError()
}